--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -443,12 +443,11 @@ static PyModuleDef_Slot slots[] = {
         <li><a href="https://www.phpied.com/css-railroad-diagrams/">Basic parsing</a> is easy</li>
         <li class="fragment">~1200 lines of C++</li>
     </ul>
-    <pre class="fragment"><code data-trim data-line-numbers="1|13" class="text"><script type="text/template">
-        838323 function calls (810518 primitive calls) in 2.638 seconds
+    <pre class="fragment"><code data-trim data-line-numbers="1|12" class="text"><script type="text/template">
+     838323 function calls (810518 primitive calls) in 2.638 seconds
      ncalls  percall  cumtime  percall function
         1    0.000    2.644    2.644 render
         1    0.002    1.727    1.727 process_exploded_book
-        1    0.000    1.402    1.402 __call__
         1    0.004    1.402    1.402 process_book_files
       402    0.000    0.957    0.002 parsed
       131    0.000    0.939    0.007 parse
@@ -459,6 +458,26 @@ static PyModuleDef_Slot slots[] = {
     44835    0.000    0.783    0.000 entity_to_unicode
     </script></code></pre>
     <div class="fragment">2x speedup here worst case <em>60x</em> speedup</div>
+</section>
+
+<section id="entities-in-c">
+    <h3>Convert those entities in C</h3>
+    <ul>
+        <li>HTML entities: <code class="html">&amp; name | number ;</code></li>
+        <li class="fragment">Use SIMD to find <code class="html">&amp;</code></li>
+        <li class="fragment">Use perfect hashing (<a href="https://www.gnu.org/software/gperf/manual/gperf.html">gperf</a>)</li>
+        <li class="fragment">~200 lines of C</li>
+    </ul>
+    <pre class="fragment"><code data-trim data-line-numbers="1|5" class="text"><script type="text/template">
+   531019 function calls (503202 primitive calls) in 1.788 seconds
+   ncalls  percall  cumtime  percall function
+        1    0.000    1.794    1.794 render
+        1    0.002    0.865    0.865 process_exploded_book
+        1    0.000    0.574    0.574 get_metadata
+        1    0.004    0.529    0.529 process_book_files
+    24220/23 0.000    0.411    0.018 deepcopy
+    </script></code></pre>
+    <div class="fragment">Further <em>30%</em> speedup</div>
 </section>
 
 <section id="takeaways">
