Update single file

--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -469,15 +469,15 @@ static PyModuleDef_Slot slots[] = {
         <li class="fragment">~200 lines of C</li>
     </ul>
     <pre class="fragment"><code data-trim data-line-numbers="1|5" class="text"><script type="text/template">
-   531019 function calls (503202 primitive calls) in 1.788 seconds
-   ncalls  percall  cumtime  percall function
-        1    0.000    1.794    1.794 render
-        1    0.002    0.865    0.865 process_exploded_book
-        1    0.000    0.574    0.574 get_metadata
-        1    0.004    0.529    0.529 process_book_files
-    24220/23 0.000    0.411    0.018 deepcopy
+     531019 function calls (503202 primitive calls) in 1.788 seconds
+     ncalls  percall  cumtime  percall function
+          1    0.000    1.794    1.794 render
+          1    0.002    0.865    0.865 process_exploded_book
+          1    0.000    0.574    0.574 get_metadata
+          1    0.004    0.529    0.529 process_book_files
+     24220/23  0.000    0.411    0.018 deepcopy
     </script></code></pre>
-    <div class="fragment">Further <em>30%</em> speedup</div>
+    <div class="fragment">Further <em>30%</em> speedup for a total <em>3x</em> speedup</div>
 </section>
 
 <section id="takeaways">
