--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -493,6 +493,7 @@ static PyModuleDef_Slot slots[] = {
                 <li class="fragment">Counting bits</li>
             </ul>
         </li>
+        <li class="fragment">Originally conceived for maths</li>
     </ul>
 </section>
 
