Add talk URL to first slide

--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -69,7 +69,10 @@ code { overflow: hidden !important; }
 <section id="title">
   <h2>Making Python programs <em>fast</em></h2>
   <p>Kovid Goyal</p>
-  <p><small>September 21, 2024 @ PyCon India</small></p>
+  <small>
+    <p>September 21, 2024 @ PyCon India</p>
+    <p><a href="https://sw.kovidgoyal.net/talks/pycon2024">sw.kovidgoyal.net/talks/pycon2024</a></p>
+  </small>
 </section>
 
 <section id="need-for-speed">
@@ -589,10 +592,13 @@ static PyModuleDef_Slot slots[] = {
         <li class="fragment">Don’t be afraid to use C when needed</li>
         <li class="fragment">SIMD is fun 😜</li>
     </ul>
-    <div class="fragment" style="margin-top: 1em"><small>Benchmark code available at:
-        <a href="https://sw.kovidgoyal.net/talks/pycon2024/code.py">
-            sw.kovidgoyal.net/talks/pycon2024/code.py
-        </a>
+    <div class="fragment" style="margin-top: 1em"><small>
+        <div>Slides at:
+        <a href="https://sw.kovidgoyal.net/talks/pycon2024">sw.kovidgoyal.net/talks/pycon2024</a>
+        </div>
+        <div>Benchmark code at:
+        <a href="https://sw.kovidgoyal.net/talks/pycon2024/code.py">sw.kovidgoyal.net/talks/pycon2024/code.py</a>
+        </small></div>
     </div>
 </section>
 
