--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -631,8 +631,6 @@ Object.entries(code_blocks).forEach(([classname, code]) => {
 <script src="https://unpkg.com/reveal.js@^5//dist/reveal.js"></script>
 
 <!-- reveal.js plugins -->
-<script src="https://unpkg.com/reveal.js@^5//plugin/notes/notes.js"></script>
-<script src="https://unpkg.com/reveal.js@^5//plugin/markdown/markdown.js"></script>
 <script src="https://unpkg.com/reveal.js@^5//plugin/highlight/highlight.js"></script>
 
 <script>
@@ -644,7 +642,7 @@ Object.entries(code_blocks).forEach(([classname, code]) => {
         slideNumber: 'c/t',
 
         // Learn about plugins: https://revealjs.com/plugins/
-        plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+        plugins: [ RevealHighlight ]
     });
 </script> </body> </html>
 <!-- }}} --->
