--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -284,7 +284,7 @@ pool = Pool(num_workers, connect_to_shm)
 <section id="c-ext">
     <h3>Python <em>C</em> API</h3>
     <h6>Where strong men fear to tread</h6>
-    <pre><code data-trim data-line-numbers="2|4-6|7-8|10-11|12" class="c"><script type="text/template">
+    <pre><code data-trim data-line-numbers="2|4-6|7|9-10|11" class="c"><script type="text/template">
 static PyObject*
 py_base64(PyObject *self, PyObject *input_data) {
     RAII_PY_BUFFER(view);
@@ -305,7 +305,7 @@ py_base64(PyObject *self, PyObject *input_data) {
 
 <section id="boilerplate">
     <h3>Needed boilerplate</h3>
-    <pre><code data-trim data-line-numbers="2-3|11-12|14" class="c"><script type="text/template">
+    <pre><code data-trim data-line-numbers="1|3|11-12|14" class="c"><script type="text/template">
 PyMODINIT_FUNC PyInit_fast_base64(void) {
   static PyMethodDef module_methods[] = {
       {"b64_enc", py_base64, METH_O, ""},
@@ -421,7 +421,7 @@ static PyModuleDef_Slot slots[] = {
         <li>Users reported opening certain e-books in calibre was very slow</li>
         <li class="fragment">Run function to preprocess book in profiler</li>
     </ul>
-    <pre class="fragment"><code data-trim data-line-numbers="1|2|3|7|8|10,13" class="text"><script type="text/template">
+    <pre class="fragment"><code data-trim data-line-numbers="1|2|3|6|8|10,13" class="text"><script type="text/template">
    1925486 function calls (1860600 primitive calls) in 5.759 seconds
    ncalls  tottime  cumtime  percall function
         1    0.000    5.762    5.762 render
@@ -471,7 +471,7 @@ static PyModuleDef_Slot slots[] = {
         <li class="fragment">Use perfect hashing (<a href="https://www.gnu.org/software/gperf/manual/gperf.html">gperf</a>)</li>
         <li class="fragment">~200 lines of C</li>
     </ul>
-    <pre class="fragment"><code data-trim data-line-numbers="1|5" class="text"><script type="text/template">
+    <pre class="fragment"><code data-trim data-line-numbers="1|7" class="text"><script type="text/template">
      531019 function calls (503202 primitive calls) in 1.788 seconds
      ncalls  percall  cumtime  percall function
           1    0.000    1.794    1.794 render
