--- a/talks/pycon2024/index.html
+++ b/talks/pycon2024/index.html
@@ -423,18 +423,18 @@ static PyModuleDef_Slot slots[] = {
     </ul>
     <pre class="fragment"><code data-trim="" data-line-numbers="1|2|3|6|8|10,13" class="text"><script type="text/template">
    1925486 function calls (1860600 primitive calls) in 5.759 seconds
-   ncalls  tottime  cumtime  percall function
-        1    0.000    5.762    5.762 render
-        1    0.001    4.776    4.776 process_exploded_book
-        1    0.004    4.392    4.392 process_book_files
-        2    0.000    2.923    1.461 transform_style_sheet
-      133    0.001    2.224    0.017 parse_file
- 3029/387    0.024    1.329    0.003 _parse_css_token
-        3    0.000    1.303    0.434 parse_css
-        3    0.000    1.302    0.434 parseCSSString
-        3    0.000    1.302    0.434 _setCssTextWithEncodingOverride
-        3    0.000    1.302    0.434 _setCssText
-      163    0.002    1.288    0.008 css_ruleset
+   ncalls  cumtime  percall function
+        1    5.762    5.762 render
+        1    4.776    4.776 process_exploded_book
+        1    4.392    4.392 process_book_files
+        2    2.923    1.461 transform_style_sheet
+      133    2.224    0.017 parse_file
+ 3029/387    1.329    0.003 _parse_css_token
+        3    1.303    0.434 parse_css
+        3    1.302    0.434 parseCSSString
+        3    1.302    0.434 _setCssTextWithEncodingOverride
+        3    1.302    0.434 _setCssText
+      163    1.288    0.008 css_ruleset
     </script></code></pre>
     <div class="fragment">CSS parsing is the culprit!</div>
 </section>
@@ -446,22 +446,23 @@ static PyModuleDef_Slot slots[] = {
         <li><a href="https://www.phpied.com/css-railroad-diagrams/">Basic parsing</a> is easy</li>
         <li class="fragment">~1200 lines of C++</li>
     </ul>
-    <pre class="fragment"><code data-trim="" data-line-numbers="1|12" class="text"><script type="text/template">
+    <div class="fragment">
+    <pre><code data-trim="" data-line-numbers="1|12" class="text"><script type="text/template">
      838323 function calls (810518 primitive calls) in 2.638 seconds
-     ncalls  percall  cumtime  percall function
-        1    0.000    2.644    2.644 render
-        1    0.002    1.727    1.727 process_exploded_book
-        1    0.004    1.402    1.402 process_book_files
-      402    0.000    0.957    0.002 parsed
-      131    0.000    0.939    0.007 parse
-      129    0.000    0.920    0.007 parse_xhtml
-      129    0.000    0.919    0.007 parse
-      550    0.000    0.877    0.002 {method 'sub' of 're.Pattern' objects}
-      129    0.000    0.874    0.007 xml_replace_entities
-    44835    0.000    0.783    0.000 entity_to_unicode
+     ncalls  cumtime  percall function
+        1    2.644    2.644 render
+        1    1.727    1.727 process_exploded_book
+        1    1.402    1.402 process_book_files
+      402    0.957    0.002 parsed
+      131    0.939    0.007 parse
+      129    0.920    0.007 parse_xhtml
+      129    0.919    0.007 parse
+      550    0.877    0.002 {method 'sub' of 're.Pattern' objects}
+      129    0.874    0.007 xml_replace_entities
+    44835    0.783    0.000 entity_to_unicode
     </script></code></pre>
-    <div class="fragment">2x speedup here worst case <em>60x</em> speedup</div>
-</section>
+    <div>2x speedup here worst case <em>60x</em> speedup</div>
+</div></section>
 
 <section id="entities-in-c">
     <h3>Convert those entities in C</h3>
@@ -473,15 +474,15 @@ static PyModuleDef_Slot slots[] = {
     </ul>
     <pre class="fragment"><code data-trim="" data-line-numbers="1" class="text"><script type="text/template">
     359819 function calls (358696 primitive calls) in 1.313 seconds
-    ncalls  percall  cumtime  percall function
-        1    0.000    1.317    1.317 render
-        1    0.002    0.833    0.833 process_exploded_book
-        1    0.004    0.532    0.532 process_book_files
-        1    0.002    0.305    0.305 convert
-      128    0.000    0.224    0.002 get_length
-     1798    0.000    0.220    0.000 href_to_name
-      128    0.000    0.213    0.002 transform_html
-    19681    0.000    0.192    0.000 count
+    ncalls  cumtime  percall function
+        1    1.317    1.317 render
+        1    0.833    0.833 process_exploded_book
+        1    0.532    0.532 process_book_files
+        1    0.305    0.305 convert
+      128    0.224    0.002 get_length
+     1798    0.220    0.000 href_to_name
+      128    0.213    0.002 transform_html
+    19681    0.192    0.000 count
     </script></code></pre>
     <div class="fragment">Further <em>50%</em> speedup for a total <em>4x</em> speedup</div>
 </section>
@@ -533,7 +534,7 @@ static PyModuleDef_Slot slots[] = {
 </pre></li>
         <li class="fragment">
             SIMD: Multiple groups: 12 → 16
-<pre>  [AAAB | BBCC | CDDD] → [AAA0 | BBB0 | CCC0 | DDD0 ]
+<pre>  [AAAB | BBCC | CDDD | 0000] → [AAA0 | BBB0 | CCC0 | DDD0 ]
   <span class="fragment">Focus on a single word: AAA0</span>
   <span class="fragment">Spread out its 24 bits into four groups of 6</span>
   <span class="fragment">AAA0 = [ aaaaaa | bbbbbb | cccccc | dddddd | 000000 ]</span>
