Have the kitten disappear at edge of content area

--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -110,8 +110,9 @@ code { overflow: hidden !important; }
             <li class="fragment">Make terminals a powerful platform</li>
             <li class="fragment" id="animated-kitten-container">
                 Uses Python for its UI and control
-                <object type="image/svg+xml" data="kitten.svg" style="max-width: 4em;"></object>
+                <div><object type="image/svg+xml" data="kitten.svg" style="max-width: 4em;"></object></div>
                 <style>
+                #animated-kitten-container div { overflow: hidden }
                 #animated-kitten-container object { display: none; }
                 #animated-kitten-container.visible object {
                     animation-duration: 10s;
