Emphasize final takeaway

--- a/talks/pycon2024/index.html
+++ b/talks/pycon2024/index.html
@@ -613,13 +613,13 @@ static PyModuleDef_Slot slots[] = {
         <li class="fragment">Look for pure Python opportunities</li>
         <li class="fragment">Eliminate extra copies</li>
         <li class="fragment">Use <em>memoryview</em> for binary data</li>
-        <li class="fragment">Don’t be afraid to use C when needed</li>
     </ul>
+    <h6 class="fragment">Don’t be afraid of C</h6>
     <div class="fragment" style="margin-top: 1em"><small>
-        <div>Slides at:
+        <div>Slides:
         <a href="https://sw.kovidgoyal.net/talks/pycon2024">sw.kovidgoyal.net/talks/pycon2024</a>
         </div>
-        </small><div><small>Benchmark code at:
+        </small><div><small>Benchmark code:
         <a href="https://sw.kovidgoyal.net/talks/pycon2024/code.py">sw.kovidgoyal.net/talks/pycon2024/code.py</a>
         </small></div>
     </div>
